--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
     <header>
       <div class="container">
-        <a href="/">Tanuu Home</a>
+        <a href="https://tanuuidp.github.io">Tanuu Home</a>
         <a href="https://github.com/tanuuidp">Github</a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
